chore: upgrade to JUnit 5